# jpdy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/controller/: game_controller.h
include/model/: board.h  cell.h  game_state.h  team.h
include/view/: animation_manager.h  config_widget.h  dialog_transition_manager.h  game_board_widget.h  main_window.h  question_dialog.h  team_widget.h
src/: main.cpp
src/controller/: game_controller.cpp
src/model/: board.cpp  cell.cpp  game_state.cpp
src/view/: animation_manager.cpp  config_widget.cpp  dialog_transition_manager.cpp  game_board_widget.cpp  main_window.cpp  question_dialog.cpp  team_widget.cpp
